[package]
name = "adante"
version = "0.2.1"
authors = ["Andrew Fargo <drew.fargo@gmail.com>"]
description = "A versatile, small options parser for use in the command line"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["command-line-interface", "rust-patterns"]
keywords = ["arguments", "parser", "command-line-interface", "cli"]
repository = "https://github.com/DCFargo/adante"
include = ["src/*", "Cargo.toml"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
